feat: add serve script to package.json
- Introduced a new script to serve the documentation using mdbook.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"private": true,
 	"scripts": {
 		"build": "mdbook build",
+		"serve": "mdbook serve",
 		"format": "prettier --cache --write .",
 		"preinstall": "npx only-allow pnpm",
 		"prepare": "husky",
