docs: update installation and development guides
- Removed outdated image from the getting_started guide.
- Revised text for clarity and consistency in guides.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,10 +21,12 @@
 		"autospace",
 		"commitlint",
 		"elasticlunr",
+		"izakaya",
 		"mathjax",
 		"mdbook",
 		"miku",
 		"mystia",
-		"Quan"
+		"quan",
+		"touhou"
 	]
 }
