--- a/book.toml
+++ b/book.toml
@@ -6,7 +6,7 @@ language = "zh-CN"
 
 [output.html]
 additional-css = ["book.css", "assets/fancybox/fancybox.css"]
-additional-js = ["assets/js/search/fzf.umd.js", "assets/js/search/elasticlunr.js", "assets/fancybox/fancybox.umd.js", "assets/fancybox/fancybox.js", "assets/js/external-links-newtab.js"]
+additional-js = ["book.js", "assets/search/fzf.umd.js", "assets/search/elasticlunr.js", "assets/fancybox/fancybox.umd.js"]
 mathjax-support = true
 preferred-dark-theme = "ayu"
 git-repository-url = "https://github.com/MetaMikuAI/MetaMystia"
