chore: add default HTML template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,11 @@
 		"noopener",
 		"noreferrer",
 		"quan",
-		"touhou"
+		"scrollbox",
+		"searchbar",
+		"searchindex",
+		"searchresults",
+		"touhou",
+		"unhide"
 	]
 }
